Signature editor: Do not specify that the edit file is temporary

Specifying this explicitly means that the user's signature file will
be deleted (after a delay) after editing it.  Let KIO handle the
decision itself.

BUG:400567
(cherry picked from commit 9150359070370ae43897c01e94cb0a523676c2d2)